3 - Documentação - Reformatando código