@@ -14,7 +14,7 @@ import org.springframework.stereotype.Service;
 import javax.naming.AuthenticationException;
 import java.time.Duration;
 import java.time.Instant;
-import java.util.Arrays;
+import java.util.List;
 
 @Service
 public class AuthCompanyUseCase {
@@ -51,7 +51,7 @@ public class AuthCompanyUseCase {
                 .withIssuer("javagas")
                 .withExpiresAt(expiresIn)
                 .withSubject(company.getId().toString())
-                .withClaim("roles", Arrays.asList("COMPANY"))
+                .withClaim("roles", List.of("COMPANY"))
                 .sign(algorithm);
         var authCompanyResponseDTO = AuthCompanyResponseDTO.builder()
                 .access_token(token)
